Assertion failed: !m_function in CompletionHandler::~CompletionHandler() https://bugs.webkit.org/show_bug.cgi?id=208457

Reviewed by Chris Dumez.

Ensure completion handler is called in WebsiteDataStore::getResourceLoadStatisticsDataSummary.

* UIProcess/WebsiteData/WebsiteDataStore.cpp:
(WebKit::WebsiteDataStore::getResourceLoadStatisticsDataSummary):


Canonical link: https://commits.webkit.org/221505@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@257866 268f45cc-cd09-0410-ab3c-d52691b4dbfc